<resources>
    <string name="app_name">SecureMe</string>
    <string name="account">Account</string>
    <string name="accountname">Name</string>
    <string name="change_pin">Change PIN</string>
    <string name="change_master_key">Change Master Key</string>
    <string name="sign_out">Sign Out</string>
    <string name="clipboard_label">password</string>
    <string name="secureme_pin">SecureMe PIN</string>
    <string name="copied_to_clipboard">Copied To Clipboard</string>
    <string name="digit_0">0</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
    <string name="clear">clear</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="asterisk">*</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="email">Email</string>
    <string name="import_str">Import</string>
    <string name="title_activity_master_key">MasterKey</string>
    <string name="title_input_current_master_key">Current Master Key</string>
    <string name="hint_current_master_key">Enter your current master key</string>
    <string name="title_new_master_key">New Master Key</string>
    <string name="hint_new_master_key">Enter you new master key</string>
    <string name="title_reenter_master_key">Confirm Master Key</string>
    <string name="hint_reenter_master_key">Confirm your new master key</string>
    <string name="hidden_text">*****</string>

</resources>
