<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.poorah.secureme.activity.MasterKey">

    <LinearLayout
        android:id="@+id/current_master_key_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:layout_alignParentLeft="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="5dp"
            android:text="@string/title_input_current_master_key"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/current_master_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="5dp"
            android:hint="@string/hint_current_master_key"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/new_master_key_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/current_master_key_layout"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/title_new_master_key"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/new_master_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/hint_new_master_key"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/confirm_new_master_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/hint_reenter_master_key"
            android:textSize="18sp" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:minHeight="80dp"
        android:padding="10dp"
        android:layout_marginBottom="10dp">
        
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:layout_margin="5dp"
            android:id="@+id/cancel_action"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/ok"
            android:layout_margin="5dp"
            android:id="@+id/ok_action"
            style="@style/Widget.AppCompat.Button.Colored"/>


    </LinearLayout>

    

</RelativeLayout>
