<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.poorah.secureme.activity.SecurityPIN">

    <TableLayout
        android:id="@+id/pinDisplayLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tableLayout"
        android:layout_alignParentStart="true"
        android:layout_margin="20dp"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="40dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/pinDisplay1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-thin"
                android:gravity="center_horizontal|center_vertical"
                android:layout_margin="10dp"
                android:text="@string/asterisk"
                android:textColor="@color/colorAccent"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/pinDisplay2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-thin"
                android:gravity="center_horizontal|center_vertical"
                android:layout_margin="10dp"
                android:text="@string/asterisk"
                android:textColor="@color/colorAccent"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/pinDisplay3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-thin"
                android:gravity="center_horizontal|center_vertical"
                android:layout_margin="10dp"
                android:text="@string/asterisk"
                android:textColor="@color/colorAccent"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/pinDisplay4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-thin"
                android:gravity="center_horizontal|center_vertical"
                android:layout_margin="10dp"
                android:text="@string/asterisk"
                android:textColor="@color/colorAccent"
                android:textSize="48sp" />

        </TableRow>


    </TableLayout>


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="80dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/pin1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal|center_vertical"
                android:layout_margin="10dp"
                android:text="@string/digit_1"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/pin2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal|center_vertical"
                android:layout_margin="10dp"
                android:text="@string/digit_2"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/pin3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal|center_vertical"
                android:layout_margin="10dp"
                android:text="@string/digit_3"
                android:textSize="48sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="80dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/pin4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal|center_vertical"
                android:layout_margin="10dp"
                android:text="@string/digit_4"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/pin5"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal|center_vertical"
                android:layout_margin="10dp"
                android:text="@string/digit_5"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/pin6"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal|center_vertical"
                android:layout_margin="10dp"
                android:text="@string/digit_6"
                android:textSize="48sp" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="80dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/pin7"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal|center_vertical"
                android:layout_margin="10dp"
                android:text="@string/digit_7"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/pin8"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal|center_vertical"
                android:layout_margin="10dp"
                android:text="@string/digit_8"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/pin9"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal|center_vertical"
                android:layout_margin="10dp"
                android:text="@string/digit_9"
                android:textSize="48sp" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="80dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/pinDel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-thin"
                android:gravity="center_horizontal|center_vertical"
                android:layout_margin="10dp"
                android:text="@string/clear"
                android:textColor="@color/colorAccent"
                android:textSize="38sp" />

            <TextView
                android:id="@+id/pin0"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal|center_vertical"
                android:layout_margin="10dp"
                android:text="@string/digit_0"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/pinOK"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-thin"
                android:gravity="center_horizontal|center_vertical"
                android:layout_margin="10dp"
                android:text="@string/ok"
                android:textColor="@color/colorAccent"
                android:textSize="48sp" />

        </TableRow>

    </TableLayout>

</RelativeLayout>
